# deploy_genius

./: Dockerfile  README.md  main.py  pyproject.toml
data/: data.py  providers.py
deploy/: deploy.py
kubernetes/: deployment.yaml  service.yaml
utils/: config.py  logger.py  monitor.py  registry.py
