[tool.poetry]
name = "deploy-genius"
version = "0.1.0"
description = ""
authors = ["bk <codesage@protonmail.com>"]
readme = "README.md"
packages = [{include = "deploy_genius"}]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^26.1.0"
boto3 = "^1.26.74"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
